[project]
name = "zap"
version = "0.1.0"
description = "LAN one-way file transfer (server/client)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "pyside6>=6.6.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pyproject.toml", "README.md", "LICENSE", "zap.toml", "scripts"]
